--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,26 @@ input.form{
   display: block;
   margin: 0 auto;
 }
+#accordion {
+  width: 500px;
+  margin-left: 200px;
+}
+
+#accordion dt {
+  border-bottom: solid 1px white;
+  background-color: #ccc;
+  cursor: pointer;
+  padding: 10px;
+  font-weight: bold;
+}
+
+#accordion dt.tab{
+  background-color: #cc0033;
+  cursor: default;
+}
+#accordion dd {
+  border: solid 1px #ccc;
+  background-color: #FFF;
+  margin: 0px;
+  padding: 10px;
+}
